--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "@babel/runtime-corejs3": "^7.18.3",
+    "core-js": "^3.23.2",
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
     "standard": "^17.0.0"
